# langchain_neo4j

./: .env.example  .gitignore  CHANGELOG.md  COMPANY_KB_README.md  FILE_STRUCTURE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/: company_data.cypher  company_schema.cypher  generated_kb_data.json  old_demo_data.cypher  old_demo_schema.cypher
data/templates/: README.md
docker/: Dockerfile
docs/: COMPANY_KB_TEMPLATE.md  REAL_WORLD_USECASES.md  architecture.d2
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AnalyticsPage.tsx  DepartmentsPage.tsx  EmployeesPage.tsx  ProjectsPage.tsx  QueryPage.tsx
frontend/src/types/: api.ts
scripts/: benchmark_api.py  check_clients.py  clear_db.py  create_vector_index.py  fix_acme_contract.py  generate_fake_data.py  generate_template_data.py  inspect_schema.py  link_acme.py  load_company_kb.py  load_custom_data.py  load_large_kb.py  migrate_document_linking.py  test_admin.py  test_hybrid.py  test_ingestion.py  verify_contracts.py
src/: __init__.py  celery_worker.py  cli.py  main.py
src/api/: schemas.py
src/api/routes/: admin.py  company.py  health.py  query.py
src/core/: config.py  exceptions.py  logging.py
src/services/: async_neo4j_service.py  celery_service.py  ingestion_service.py  neo4j_service.py  qa_service.py  vector_service.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_config.py
