[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-langchain-api"
version = "1.0.0"
description = "Production-ready Neo4j + LangChain natural language query API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["neo4j", "langchain", "graph-database", "nlp", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "langchain==0.1.6",
    "langchain-openai==0.0.5",
    "langchain-groq==0.0.1",
    "langchain-community>=0.0.13",
    "neo4j==5.16.0",
    "python-dotenv==1.0.0",
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.23.3",
    "httpx==0.26.0",
    "ruff==0.1.13",
    "mypy==1.8.0",
    "black==24.1.1",
    "isort==5.13.2",
    "pre-commit==3.6.0",
]

caching = [
    "redis==5.0.1",
]

monitoring = [
    "prometheus-client==0.19.0",
    "structlog==24.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/neo4j-langchain-api"
Documentation = "https://github.com/yourusername/neo4j-langchain-api/docs"
Repository = "https://github.com/yourusername/neo4j-langchain-api"

[project.scripts]
neo4j-api = "src.main:main"
neo4j-cli = "src.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
